@@ -1,7 +1,9 @@
-2008-01-06  Sebastien Pouliot  <sebastien@ximian.com>
+2008-01-06  Sebastien Pouliot  <sebastien@ximian.com> 
 
 	* AvoidToStringOnStringsRule.cs: Fix false positives on corlib (when
 	an overloaded ToString, with parameters, is used).
+	* AvoidUnusedParametersRule.cs: Fix false positives on corlib (where
+	icalls were reported)
 	* EmptyDestructorRule.cs: Simplify using rocks.
 
 2008-01-05  Sebastien Pouliot  <sebastien@ximian.com> 
